apps/authentik/authentik-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 32000
  selector:
    app.kubernetes.io/name: authentik
